manifests/deployment.yaml
---
#----------------------------------------------
# Deployment - Quản lý Pod chạy API
#----------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: khuetuan-app
  namespace: khuetuan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: khuetuan-app
  template:
    metadata:
      labels:
        app: khuetuan-app
    spec:
      containers:
        - name: khuetuan-app
          image: docker.io/quochau151/khuetuan:latest
          ports:
            - containerPort: 80
              name: http
---
#----------------------------------------------
# Service - Expose API ra ngoài cluster
#----------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: khuetuan-service
  namespace: khuetuan
  labels:
    app: khuetuan
    component: service
spec:
  selector:
    app: khuetuan-app
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: LoadBalancer

---
#----------------------------------------------
# Ingress - Expose Service ra internet
#----------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: khuetuan-ingress
  namespace: khuetuan
  labels:
    app: khuetuan
    component: ingress
spec:
  rules:
    - host: khuetuan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: khuetuan-service
                port:
                  number: 80
